--- a/src/app/pages/accueil/accueil.component.html
+++ b/src/app/pages/accueil/accueil.component.html
@@ -17,12 +17,14 @@
   </ion-content>
 </ion-menu>
 
-<ion-header>
-  <ion-header translucent="true">
-    <ion-toolbar>
-      <ion-title>my app</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-header no-border>
+  <ion-toolbar mode="ios">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+      <ion-back-button color="primary"></ion-back-button>
+    </ion-buttons>
+    <ion-title class="ion-text-center">Accueil</ion-title>
+  </ion-toolbar>
 </ion-header>
 
 <ion-router-outlet main></ion-router-outlet>
