--- a/src/app/pages/patient/patient.component.html
+++ b/src/app/pages/patient/patient.component.html
@@ -1,12 +1,36 @@
+<ion-header no-border>
+  <ion-toolbar mode="ios">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+      <ion-back-button color="primary"></ion-back-button>
+    </ion-buttons>
+    <ion-title class="ion-text-center">Gestion patients</ion-title>
+  </ion-toolbar>
+</ion-header>
 <ion-content>
-  <ion-searchbar placeholder="rechercher" (ionInput)="search($event)"></ion-searchbar>
+  <ion-searchbar
+          animated
+          (ionInput)="search($event)"
+          (ionCancel)="cancelSearch($event)"
+          (ionClear) = "cancelSearch($event)"
+          showCancelButton="focus">
+  </ion-searchbar>
   <ion-item *ngIf="patientsFilter && patientsFilter.length <= 0">
     Aucun résultat trouvé
   </ion-item>
   <ion-list *ngIf="patients">
     <ion-item *ngFor="let p of ((patientsFilter !== null && patientsFilter.length > 0) ? patientsFilter : patients)">
-      {{p}}
+      <ion-card padding style="width: 100%">
+        <ion-card-title>
+          {{p.nom}} {{p.prenom}}
+        </ion-card-title>
+        <ion-card-subtitle>
+          cin: {{p.cin}} / tel: {{p.telephone}}
+        </ion-card-subtitle>
+      </ion-card>
     </ion-item>
-    <ion-badge [routerLink]="'/patient-add'"><ion-icon icon="add"></ion-icon></ion-badge>
   </ion-list>
+  <ion-fab vertical="bottom" horizontal="end">
+    <ion-fab-button translucent="true" mode="ios" style="position: relative" [routerLink]="'/patient-add'"><ion-icon icon="add"></ion-icon></ion-fab-button>
+  </ion-fab>
 </ion-content>
