--- a/src/app/pages/accueil/accueil.component.html
+++ b/src/app/pages/accueil/accueil.component.html
@@ -1,5 +1,5 @@
-<ion-header no-border>
-  <ion-toolbar mode="ios">
+<ion-header no-border >
+  <ion-toolbar mode="ios" class="my-header">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
