--- a/src/app/pages/consultation-add/consultation-add.component.html
+++ b/src/app/pages/consultation-add/consultation-add.component.html
@@ -1,8 +1,8 @@
 <ion-header no-border>
-  <ion-toolbar [routerLink]="'/consultation'" mode="ios">
+  <ion-toolbar [routerLink]="'/consultation'" mode="ios" class="my-header">
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-      <ion-back-button color="primary"></ion-back-button>
+<!--      <ion-menu-button></ion-menu-button>-->
+      <ion-back-button color="default"></ion-back-button>
     </ion-buttons>
     <ion-title class="ion-text-center">Gestion Consultations</ion-title>
   </ion-toolbar>
@@ -39,7 +39,7 @@
           <ion-input required type="text" name="nom" [(ngModel)]="consultation.prescription"></ion-input>
         </ion-item>
       </ion-card-content>
-      <ion-button mode="ios" type="submit" expand="block">Enregistrer</ion-button>
+      <ion-button mode="ios" type="submit" class="add-button" expand="block">Enregistrer</ion-button>
     </form>
   </ion-card>
 </ion-content>
