--- a/src/app/pages/consultation/consultation.component.html
+++ b/src/app/pages/consultation/consultation.component.html
@@ -1,8 +1,8 @@
 <ion-header no-border>
-  <ion-toolbar mode="ios">
+  <ion-toolbar mode="ios" class="my-header">
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-      <ion-back-button color="primary"></ion-back-button>
+<!--      <ion-menu-button></ion-menu-button>-->
+      <ion-back-button color="default"></ion-back-button>
     </ion-buttons>
     <ion-title class="ion-text-center">Gestion Consultations</ion-title>
   </ion-toolbar>
@@ -67,6 +67,6 @@
     </ion-item>
   </ion-list>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button translucent="true" mode="ios" [routerLink]="'/consultation-add'"><ion-icon icon="add"></ion-icon></ion-fab-button>
+    <ion-fab-button class="add-button" translucent="true" mode="ios" [routerLink]="'/consultation-add'"><ion-icon icon="add"></ion-icon></ion-fab-button>
   </ion-fab>
 </ion-content>
