--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -1,30 +1,52 @@
-<ion-menu menuId="principal" swipeGesture="true" side="start" type="overlay" contentId="content1" (ionWillOpen)="ionWillOpen()">
-    <ion-header>
-        <ion-toolbar color="primary">
-            <ion-avatar>
-                <img src="../../../assets/img/logo2.png" alt="avatar"/>
-            </ion-avatar>
-        </ion-toolbar>
-    </ion-header>
+<ion-menu menuId="principal" swipeGesture="true" side="start" type="overlay"
+          contentId="content1" (ionWillOpen)="ionWillOpen()">
     <ion-content>
-        <ion-list *ngIf="(user ? user.profile ? user.profile.libelle ? user.profile.libelle : 'Admin' : 'Admin' : 'Admin') === 'Admin'">
-            <ion-item (click)="close()" [routerLink]="'/accueil'"><ion-icon icon="home"></ion-icon>&nbsp; Accueil
-            </ion-item>
-            <ion-item (click)="close()" [routerLink]="'/profile'"><ion-icon icon="person"></ion-icon>&nbsp; Profile
-            </ion-item>
-            <ion-item (click)="close()" [routerLink]="'/rendez-vous'"><ion-icon name="clipboard"></ion-icon>&nbsp; Rendez-vous</ion-item>
-            <ion-item (click)="close()" [routerLink]="'/consultation'"><ion-icon name="pulse"></ion-icon>&nbsp; Consultations</ion-item>
-            <ion-item (click)="close()" [routerLink]="'/patient'"><ion-icon name="body"></ion-icon>&nbsp; Patients</ion-item>
-            <ion-item [routerLink]="'/login'" (click)="logout()"><ion-icon name="exit"></ion-icon>&nbsp; Logout</ion-item>
-        </ion-list>
-        <ion-list *ngIf="(user ? user.profile ? user.profile.libelle ? user.profile.libelle : 'Admin' : 'Admin' : 'Admin') === 'Patient'">
-            <ion-item (click)="close()" [routerLink]="['/patient-rv', user.id]"><ion-icon name="clipboard"></ion-icon>&nbsp; Mes
-                rendez-vous
-            </ion-item>
-            <ion-item (click)="close()" [routerLink]="'/accueil'"><ion-icon name="pulse"></ion-icon>&nbsp; Mes consultations
-            </ion-item>
-          <ion-item [routerLink]="'/login'" (click)="logout()"><ion-icon name="exit"></ion-icon>&nbsp; Logout</ion-item>
-        </ion-list>
+
+        <ion-row class="menu-header">
+
+            <ion-col size="4">
+                <img src="../../../assets/img/logo/logo4.png" alt="avatar"/>
+            </ion-col>
+
+            <!--<ion-col size="8">
+                <ion-title class="menu-title">{{user ? user.nomComplet ? user.nomComplet : '' : ''}}</ion-title>
+            </ion-col>-->
+        </ion-row>
+        <ion-row class="menu">
+            <ion-col size="12">
+                <ion-list
+                        class="item" *ngIf="(user ? user.profile ? user.profile.libelle ? user.profile.libelle : 'Admin' : 'Admin' : 'Admin') === 'Admin'">
+                    <ion-item (click)="close()" [routerLink]="'/accueil'"><ion-icon icon="home"></ion-icon>&nbsp;
+                        Accueil
+                    </ion-item>
+                    <ion-item (click)="close()" [routerLink]="'/profile'"><ion-icon icon="person"></ion-icon>&nbsp;
+                        Profile
+                    </ion-item>
+                    <ion-item (click)="close()" [routerLink]="'/rendez-vous'"><ion-icon name="clipboard"></ion-icon>&nbsp;
+                        Rendez-vous
+                    </ion-item>
+                    <ion-item (click)="close()" [routerLink]="'/consultation'"><ion-icon name="pulse"></ion-icon>&nbsp;
+                        Consultations
+                    </ion-item>
+                    <ion-item (click)="close()" [routerLink]="'/patient'"><ion-icon name="body"></ion-icon>&nbsp;
+                        Patients
+                    </ion-item>
+                    <ion-item [routerLink]="'/login'" (click)="logout()"><ion-icon name="exit"></ion-icon>&nbsp; Logout
+                    </ion-item>
+                </ion-list>
+                <ion-list *ngIf="(user ? user.profile ? user.profile.libelle ? user.profile.libelle : 'Admin' : 'Admin' : 'Admin') === 'Patient'">
+                    <ion-item (click)="close()" [routerLink]="['/patient-rv', user.id]"><ion-icon
+                            name="clipboard"></ion-icon>&nbsp; Mes
+                        rendez-vous
+                    </ion-item>
+                    <ion-item (click)="close()" [routerLink]="'/accueil'"><ion-icon name="pulse"></ion-icon>&nbsp; Mes
+                        consultations
+                    </ion-item>
+                    <ion-item [routerLink]="'/login'" (click)="logout()"><ion-icon name="exit"></ion-icon>&nbsp; Logout
+                    </ion-item>
+                </ion-list>
+            </ion-col>
+        </ion-row>
     </ion-content>
 </ion-menu>
 
