--- a/src/app/pages/patient-add/patient-add.component.html
+++ b/src/app/pages/patient-add/patient-add.component.html
@@ -1,8 +1,8 @@
 <ion-header no-border>
-    <ion-toolbar [routerLink]="'/patient'" mode="ios">
+    <ion-toolbar [routerLink]="'/patient'" mode="ios" class="my-header">
         <ion-buttons slot="start">
-            <ion-menu-button></ion-menu-button>
-            <ion-back-button color="primary"></ion-back-button>
+<!--            <ion-menu-button></ion-menu-button>-->
+            <ion-back-button color="default"></ion-back-button>
         </ion-buttons>
       <ion-title class="ion-text-center">Gestion patients</ion-title>
     </ion-toolbar>
@@ -63,7 +63,7 @@
                     </ion-radio-group>
                 </ion-list>
             </ion-card-content>
-          <ion-button [disabled]="cinExist" mode="ios" type="submit" expand="block">Enregistrer</ion-button>
+          <ion-button [disabled]="cinExist" class="add-button" mode="ios" type="submit" expand="block">Enregistrer</ion-button>
         </form>
     </ion-card>
 </ion-content>
