--- a/src/app/pages/patient-rv/patient-rv.component.html
+++ b/src/app/pages/patient-rv/patient-rv.component.html
@@ -1,8 +1,8 @@
 <ion-header no-border>
-  <ion-toolbar mode="ios">
+  <ion-toolbar mode="ios" class="my-header">
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-      <ion-back-button color="primary"></ion-back-button>
+<!--      <ion-menu-button></ion-menu-button>-->
+      <ion-back-button color="default"></ion-back-button>
     </ion-buttons>
     <ion-title class="ion-text-center">Gestion Rendez-Vous</ion-title>
   </ion-toolbar>
@@ -30,7 +30,7 @@
       </ion-card>
     </ion-item>
   </ion-list>
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+  <!--<ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button translucent="true" mode="ios" [routerLink]="'/rendez-vous-add'"><ion-icon icon="add"></ion-icon></ion-fab-button>
-  </ion-fab>
+  </ion-fab>-->
 </ion-content>
