--- a/src/app/pages/accueil/accueil.component.html
+++ b/src/app/pages/accueil/accueil.component.html
@@ -8,5 +8,27 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-grid>
+    <ion-row>
+      <ion-col size="4"></ion-col>
+      <ion-col size="4" align-items-center>
+        <img src="../../../assets/img/logo/logo4.png" alt="logo"/>
+      </ion-col>
+    </ion-row>
+    <ion-row style="margin-top: 2%">
+      <ion-col size="12" align-items-center class="ion-text-center">
+        <ion-title class="ion-text-capitalize ion-text-center login-title">
+          Sen-Karanguei
+        </ion-title>
+      </ion-col>
+    </ion-row>
+    <ion-row style="margin-top: 2%">
+      <ion-col size="1"></ion-col>
+      <ion-col size="10">
+        Bienvenue dans votre application Sen-Karanguei qui vous permet de faire une gestion de vos
+        patients, rendez-vous et consultations avec différentes options. Vous pouvez demarrer en créant votre
+        premier patient ici. Tous les options sont disponible sur le menu a votre gauche accessible avec
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
