--- a/src/app/pages/consultation-add/consultation-add.component.html
+++ b/src/app/pages/consultation-add/consultation-add.component.html
@@ -10,7 +10,7 @@
 <ion-content>
   <ion-card mode="ios">
     <ion-card-header>
-      <ion-card-title mode="ios">Nouvelle consultation</ion-card-title>
+      <ion-card-title mode="ios" class="content">Nouvelle consultation</ion-card-title>
     </ion-card-header>
 
     <form (ngSubmit)="save()">
