--- a/src/app/pages/patient-add/patient-add.component.html
+++ b/src/app/pages/patient-add/patient-add.component.html
@@ -10,7 +10,7 @@
 <ion-content>
     <ion-card mode="ios">
         <ion-card-header>
-            <ion-card-title mode="ios">Nouveau patient</ion-card-title>
+            <ion-card-title class="content" mode="ios">Nouveau patient</ion-card-title>
         </ion-card-header>
 
         <form (ngSubmit)="save()">
