--- a/src/app/pages/consultation/consultation.component.html
+++ b/src/app/pages/consultation/consultation.component.html
@@ -8,64 +8,82 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-searchbar slot="fixed"
-          placeholder="rechercher"
-          animated
-          (ionInput)="search($event)"
-          (ionCancel)="cancelSearch($event)"
-          (ionClear) = "cancelSearch($event)"
-          showCancelButton="focus">
-  </ion-searchbar>
-  <ion-item *ngIf="consultationsFilter && consultationsFilter.length <= 0">
-    Aucun résultat trouvé
-  </ion-item>
-  <ion-list *ngIf="consultations" style="margin-top: 10%">
-    <ion-item *ngFor="let c of ((consultationsFilter !== null && consultationsFilter.length > 0) ? consultationsFilter : consultations)">
-      <ion-card padding style="width: 100%">
-        <ion-card-title>
-         Consulté le {{c.dateConsultation | date: 'dd/MM/yyyy'}}
-        </ion-card-title>
-        <ion-card-content>
-          <ion-item>
-            <ion-card-title>
-              CIN Patient: &nbsp;
-            </ion-card-title>
-            <ion-card-subtitle>
-              {{c.rendezVous.patient.cin}}
-            </ion-card-subtitle>
-          </ion-item>
-
-          <ion-item>
-            <ion-card-title>
-              Patient: &nbsp;
-            </ion-card-title>
-            <ion-card-subtitle>
-              {{c.rendezVous.patient.nomComplet}}
-            </ion-card-subtitle>
-          </ion-item>
-
-          <ion-item>
-            <ion-card-title>Diagnostic: &nbsp;</ion-card-title>
-            <ion-card-subtitle>
-              <p>
-                {{c.diagnostic}}
-              </p>
-            </ion-card-subtitle>
-          </ion-item>
-
-          <ion-item>
-            <ion-card-title>Prescription: &nbsp;</ion-card-title>
-            <ion-card-subtitle>
-              <p>
-                {{c.prescription}}
-              </p>
-            </ion-card-subtitle>
-          </ion-item>
-
-        </ion-card-content>
-      </ion-card>
-    </ion-item>
-  </ion-list>
+  <ion-grid slot="fixed">
+    <ion-row>
+      <ion-col size="12">
+        <ion-searchbar
+                placeholder="rechercher"
+                animated
+                (ionInput)="search($event)"
+                (ionCancel)="cancelSearch($event)"
+                (ionClear)="cancelSearch($event)"
+                showCancelButton="focus">
+        </ion-searchbar>
+        <ion-item *ngIf="consultationsFilter && consultationsFilter.length <= 0">
+          Aucun résultat trouvé
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-grid class="grid">
+    <ion-row *ngIf="consultations" style="margin-top: 10%">
+      <ion-col size="12">
+        <ion-card *ngFor="let c of ((consultationsFilter !== null && consultationsFilter.length > 0) ? consultationsFilter : consultations)" padding>
+          <ion-grid>
+            <ion-row>
+              <ion-col size="12">
+                <ion-card-title class="content">
+                  Consulté le {{c.dateConsultation | date: 'dd/MM/yyyy'}}
+                </ion-card-title>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col size="12">
+                <ion-card-subtitle>
+                  CIN: &nbsp;{{c.rendezVous.patient.cin}}
+                </ion-card-subtitle>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col size="12">
+                <ion-card-subtitle>
+                  Patient: &nbsp;{{c.rendezVous.patient.nom}} {{c.rendezVous.patient.prenom}}
+                </ion-card-subtitle>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col size="12">
+                <ion-card-subtitle>
+                  Téléphone: &nbsp;{{c.rendezVous.patient.telephone}}
+                </ion-card-subtitle>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col size="12">
+                <ion-card-subtitle>
+                  Medecin: &nbsp;{{c.utilisateur.nom}} {{c.utilisateur.prenom}}
+                </ion-card-subtitle>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col size="12">
+                <ion-card-subtitle>
+                  Diagnostic: &nbsp; {{c.diagnostic}}
+                </ion-card-subtitle>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col size="12">
+                <ion-card-subtitle>
+                  Prescription: &nbsp; {{c.prescription}}
+                </ion-card-subtitle>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button class="add-button" translucent="true" mode="ios" [routerLink]="'/consultation-add'"><ion-icon icon="add"></ion-icon></ion-fab-button>
   </ion-fab>
