--- a/src/app/pages/consultation/consultation.component.scss
+++ b/src/app/pages/consultation/consultation.component.scss
@@ -1,1 +1,12 @@
+.content {
+  background-color: white;
+  //background-color: #343331;
+  --color: #af3a52;
+  font-weight: bold;
+}
 
+.grid {
+  //background-color: #343331;
+  background-color: white;
+  height: 100%;
+}
