--- a/src/app/pages/accueil/accueil.component.scss
+++ b/src/app/pages/accueil/accueil.component.scss
@@ -4,3 +4,24 @@
   --color: #af4535;
   --color-hover: #89d336;
 }
+
+.text-style {
+  font-weight: bold;
+  font-size: 125%;
+  font-family: "Times New Roman", sans-serif;
+}
+
+.content {
+  background-color: white;
+  //background-color: #343331;
+  --color: #af3a52;
+  font-weight: bold;
+}
+
+.login-button {
+  --background: #af3a52;
+  --color-activated: #af3a52;
+  --background-activated: #bebfbf;
+  --color-hover: #af3a52;
+  --background-hover: #bebfbf;
+}
